# blog

./: .gitignore  CLAUDE.md  README.md  WRITING_WORKFLOW_COMPARISON.md  astro.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.astro/: settings.json
.astro/astro/: content.d.ts
.github/workflows/: deploy.yml
astro-blog/: requirements-doc.txt
astro-blog/.astro/: settings.json
astro-blog/.astro/astro/: content.d.ts
astro-blog/src/content/writing/posts/: sample-post.md
docs/: 404.md  index.md
docs/javascripts/svelte/: bundle.js  bundle.umd.cjs  style.css
docs/writing/: .authors.yml  index.md
scripts/: generate_desc.py
src/: app.postcss
src/components/: TableOfContents.astro  ThemeToggle.astro
src/content/: config.ts
src/content/posts/: building-ai-powered-apps.md  llm-prompt-engineering-basics.md  minimal-test.md  sample-post.md  test-simple.md  welcome-to-my-blog.md
src/content/writing/posts/: building-ai-powered-apps.md  llm-prompt-engineering-basics.md  welcome-to-my-blog.md
src/layouts/: Layout.astro  PostLayout.astro
src/pages/: about.astro  index.astro
src/pages/categories/: [category].astro  index.astro
src/pages/posts/: [slug].astro  index.astro
src/pages/writing/: index.astro
src/utils/: dates.ts  posts.ts
