[project]
name = "servando-blog"
version = "0.1.0"
description = "Servando Torres's personal blog built with MkDocs Material"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Servando Torres", email = "servando@controlthrive.com" }
]
license = { file = "LICENSE" }
keywords = ["blog", "mkdocs", "ai", "machine-learning", "technology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]
dependencies = [
    "mkdocs-material[imaging]",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-minify-plugin",
    "mkdocs-redirects",
    "mkdocs-rss-plugin",
    "openai",
    "typer",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://servando.co"
Repository = "https://github.com/vandotorres/blog"
Documentation = "https://servando.co"
"Bug Tracker" = "https://github.com/vandotorres/blog/issues"

[project.scripts]
serve-blog = "scripts.serve:main"
build-blog = "scripts.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["blog"]